<resources>
    <string name="app_name">Video Downloader</string>
    <string name="app_title">Video Downloader Pro</string>
    <string name="app_subtitle">Download videos from TikTok, Instagram, YouTube & more</string>
    
    <string name="paste_url">Paste Video URL</string>
    <string name="url_hint">Enter video URL here...</string>
    <string name="download_video">Download Video</string>
    <string name="downloading">Downloading...</string>
    <string name="download_complete">Download Complete!</string>
    <string name="download_failed">Download Failed</string>
    
    <string name="supported_platforms">Supported Platforms</string>
    <string name="recent_downloads">Recent Downloads</string>
    <string name="no_downloads_yet">No downloads yet</string>
    
    <string name="settings">Settings</string>
    <string name="download_location">Download Location</string>
    <string name="video_quality">Video Quality</string>
    <string name="auto_download">Auto Download</string>
    <string name="notifications">Notifications</string>
    
    <string name="permission_required">Permission Required</string>
    <string name="storage_permission_message">Storage permission is required to save videos</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="cancel">Cancel</string>
    
    <string name="invalid_url">Invalid URL</string>
    <string name="url_not_supported">This URL is not supported</string>
    <string name="network_error">Network error occurred</string>
    <string name="try_again">Try Again</string>
    
    <string name="high_quality">High Quality</string>
    <string name="medium_quality">Medium Quality</string>
    <string name="low_quality">Low Quality</string>
    
    <string name="downloads_folder">Downloads</string>
    <string name="videos_folder">Videos</string>
    <string name="custom_folder">Custom Folder</string>
    
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="about">About</string>
    
    <string name="version">Version</string>
    <string name="developed_by">Developed by</string>
    <string name="all_rights_reserved">All rights reserved</string>
</resources>